[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "datatunner"
version = "0.1.5"
description = "Ferramenta para determinar a proporção ideal de dados sintéticos em modelos de ML"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Leandro Costa Rocha", email = "leandro.rocha@example.com"}
]
keywords = ["machine learning", "deep learning", "synthetic data", "data augmentation", "neural networks"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "torch>=1.10",
    "torchvision>=0.11",
    "matplotlib>=3.3",
    "seaborn>=0.11",
    "scikit-learn>=0.24",
    "pandas>=1.2",
    "Pillow>=8.0",
    "tqdm>=4.60",
    "plotly>=5.0",
    "albumentations>=1.0",
    "imbalanced-learn>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "sdv>=1.2.0",
    "xgboost>=1.5",
    "lightgbm>=3.0",
    "catboost>=1.0",
]

[project.urls]
Homepage = "https://github.com/leandrocrx/datatunner"
Repository = "https://github.com/leandrocrx/datatunner"
Issues = "https://github.com/leandrocrx/datatunner/issues"

[tool.setuptools.packages.find]
include = ["datatunner*"]
